[package]
name = "swift-topomap"
version = "0.1.0"
edition = "2021"
authors = ["Ankur Rathore <ankur@swiftlogic.systems>"]
license = "MIT OR Apache-2.0"

[dependencies]
# TUI Stack
ratatui = { version = "0.26", features = ["crossterm"] }
crossterm = "0.27"

# System & Logic
anyhow = "1.0"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
hostname = "0.3"
plain = "0.2"
libbpf-rs = { version = "0.24", features = ["vendored"] }
libc = "0.2"

[build-dependencies]
libbpf-cargo = "0.24"
