[package]
name = "swift-topomap"
version = "0.1.0"
edition = "2021"
authors = ["Ankur Rathore <solutions@swiftlogic.systems>"]
license = "MIT OR Apache-2.0"

[dependencies]
ratatui = { version = "0.26", features = ["crossterm"] }
crossterm = "0.27"
anyhow = "1.0"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
hostname = "0.3"
plain = "0.2"
# Only this is needed; it will trigger the vendoring of libbpf/libelf/zlib automatically
libbpf-rs = { version = "0.24" }
clap = { version = "4.4", features = ["derive"] }

[build-dependencies]
libbpf-cargo = "0.24"
